# SEM-Analysis

./: ANALISE_INCONSISTENCIAS_RELATORIO.md  Aceitação_da_tecnologia.csv_analysis.txt  BDTP.csv_analysis.txt  CLAUDE.md  COMPARACAO_EXECUCAO_SCRIPTS_SEM.md  DADOS_CORRETOS_FINAIS.md  Experiência_do_usuário.csv_analysis.txt  Intenção_comportamental.csv_analysis.txt  Melhorias para fazer.txt  Percepção_novos_serviços.csv_analysis.txt  Perfil_Socioeconomico.csv_analysis.txt  Qualidade_do_serviço.csv_analysis.txt  RELATORIO_EXECUTIVO_TECNICO_CORRIGIDO.md  RELATORIO_EXPANDIDO_COMPLETO_20250729_162045.md  RELATORIO_TECNICO_CORRIGIDO_FINAL.md  RELATORIO_UNIFICADO_COMPLETO_FINAL copy 2.md  RELATORIO_UNIFICADO_COMPLETO_FINAL.md  RESUMO_ANALISE_SEM_RIGOROSA.md  RESUMO_AVALIACAO_FINAL.md  RESUMO_CORRECOES_FINAIS.md  RESUMO_CORRECOES_FINAIS_ESPECIFICAS.md  RESUMO_EXECUTIVO_CORRIGIDO.md  RESUMO_FINAL_SCRIPTS_R_SEM.md  RESUMO_MELHORIAS_FINAIS.md  Relatório Executivo.docx  RelatórioExecutivo.docx  SCRIPTS_R_README.md  SCRIPTS_R_SEM_CORRIGIDOS_FINAL.md  analise_dados_correta.R  analise_dados_correta.py  analise_final.R  analise_final_simples.R  analise_sem_completa_todas_variaveis.R  analise_sem_completa_todas_variaveis.py  analise_sem_rigorosa.R  analise_sem_rigorosa.py  analise_transporte_sem.py  avaliar_relatorio_completo.py  check_data.py  comparacao_final_python_vs_r.py  (+38 more)
.claude/: settings.local.json
analise_estruturada/: README.md  RESUMO_ESTRUTURA_ORGANIZACIONAL.md  gerar_relatorio_verificacao.py  verificar_colunas.py
csv_extraidos/: Aceitação da tecnologia.csv  (+4 more)
(+143 files in other folders)
