[project]
name = "transportes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "factor-analyzer>=0.5.1",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "semopy>=2.3.11",
    "statsmodels>=0.14.4",
]
